<resources>
    <string name="app_name">CalculadoraDMO</string>
    <string name="saida_resultado">0.0</string>
    <string name="botao_0">0</string>
    <string name="botao_1">1</string>
    <string name="botao_2">2</string>
    <string name="botao_3">3</string>
    <string name="botao_4">4</string>
    <string name="botao_5">5</string>
    <string name="botao_6">6</string>
    <string name="botao_7">7</string>
    <string name="botao_8">8</string>
    <string name="botao_9">9</string>
    <string name="botao_apagar">C</string>
    <string name="botao_limpar">CE</string>
    <string name="botao_multiplicacao">X</string>
    <string name="botao_divisao">/</string>
    <string name="botao_subtracao">-</string>
    <string name="botao_soma">+</string>
    <string name="botao_potencia">^</string>
    <string name="botao_ponto">.</string>
    <string name="botao_calcular">=</string>
</resources>
